# otonom_serit_takibi

kod/: şema1.png~
kod/devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
kod/devel/include/rosserial_arduino/: Adc.h  TestRequest.h  TestResponse.h
kod/devel/include/rosserial_mbed/: Adc.h  TestRequest.h  TestResponse.h
kod/devel/include/rosserial_msgs/: Log.h  RequestMessageInfoRequest.h  RequestMessageInfoResponse.h  RequestParamRequest.h  RequestParamResponse.h  RequestServiceInfoRequest.h  RequestServiceInfoResponse.h  TopicInfo.h
kod/devel/lib/client/: arduino  arduino_o  gelen_konum  video_node
kod/devel/lib/jpeg_streamer/: jpeg_streamer
kod/devel/lib/master/: Strip_node  control  kontrol  konum_msj  serit_takip_node
kod/devel/lib/pkgconfig/: client.pc  jpeg_streamer.pc  master.pc  rosserial_arduino.pc  rosserial_client.pc  rosserial_embeddedlinux.pc  rosserial_mbed.pc  rosserial_msgs.pc  rosserial_python.pc  rosserial_server.pc  rosserial_test.pc  rosserial_tivac.pc  rosserial_vex_cortex.pc  rosserial_vex_v5.pc  rosserial_windows.pc  rosserial_xbee.pc  usb_cam.pc  uvc_camera.pc
kod/devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
kod/devel/lib/usb_cam/: usb_cam_node
kod/devel/lib/uvc_camera/: uvc_camera_node  uvc_stereo_node
kod/devel/share/client/cmake/: clientConfig.cmake
kod/devel/share/jpeg_streamer/cmake/: jpeg_streamerConfig.cmake
kod/devel/share/master/cmake/: master-msg-extras.cmake  master-msg-paths.cmake  masterConfig.cmake
kod/devel/share/roseus/ros/master/: manifest.l
kod/devel/share/rosserial_arduino/cmake/: rosserial_arduino-extras.cmake  rosserial_arduino-msg-extras.cmake  rosserial_arduino-msg-paths.cmake  rosserial_arduinoConfig.cmake
kod/devel/share/rosserial_client/cmake/: rosserial_clientConfig.cmake
kod/devel/share/rosserial_embeddedlinux/cmake/: rosserial_embeddedlinuxConfig.cmake
kod/devel/share/rosserial_mbed/cmake/: rosserial_mbed-msg-paths.cmake  rosserial_mbedConfig.cmake
kod/src/arduino/IMU_pub/: IMU_pub.ino
kod/src/arduino/deneme1/: deneme1.ino
kod/src/arduino/kontrol_deneme/: kontrol_deneme.ino
kod/src/arduino/konum_aci/: konum_aci.ino
kod/src/arduino/motor_kontrol/: motor_kontrol.ino
kod/src/client/: CMakeLists.txt
kod/src/client/launch/: client.launch
kod/src/client/src/: arduino_code.cpp  arduino_o.cpp  gelen_konum_msj.cpp  video.cpp
kod/src/kontrolll/: kontrolll.ino
kod/src/master/: CMakeLists.txt  package.xml
kod/src/master/launch/: master.launch
kod/src/master/src/: Serit_Takip.cpp  Strip_Node.cpp  control.cpp  konum_msj.cpp
(+23 files in other folders)
